Almost final code for phase 1

--- a/templates/counter.html
+++ b/templates/counter.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <h2>Counter Page</h2>
-    <p id="current-number">Current Number: {{ current_number }}</p>
+    <p id="current_user">Hello {{ current_user }}!</p>
+    <p id="current-number">Your Current Number: {{ current_number }}</p>
 
     <form action="/add" method="post">
         <label for="addition">Add:</label>
