--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,9 @@
         <input type="password" id="password" name="password" required><br>
         
         <input type="submit" value="Submit">
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
     </form>
 </body>
 </html>
